2008-10-15  higepon  <higepon@users.sourceforge.jp>

        * ByteVectorProcedures.cpp (bytevectorEqPEx): Added bytevector=?.

        * ByteVector.h (equal): Added.

        * ByteVectorProcedures.cpp (makeBytevectorEx): Added make-bytevector.

        * Equivalent.cpp (equal): Added bytevector compare.

        * ByteVectorProcedures.cpp (nativeEndiannessEx): Added native-endianness.

        * ByteVectorProcedures.h: Added.

        * ByteVectorProcedures.cpp: Added.

2008-10-14  higepon  <higepon@users.sourceforge.jp>

        * main.cpp (main): Added debug-expand mode which shows me the result of psyntax expansion.

        * Makefile.am (test): Added library-load path functions.

        * lib/srfi/%3A8.ss: Added srfi-8 support for R6RS.

        * Makefile.am (nobase_data_DATA): Added installation of srfi/%3A8.ss

2008-10-13  higepon  <higepon@users.sourceforge.jp>

        * PortProcedures.cpp : Added current-directory and standard-library-path.

2008-10-12  higepon  <higepon@users.sourceforge.jp>

        * Addes psyntax/rev0_to10 directory.

        * Added let*-values,

        * Added case-lambda.

        * Added source information to psyntax error message.

        * r6rs-examples/psyntax.scm: Added newest version rev 10 of psyntax.

        * scripts/gen-pre-compiled-faster-cpp.scm (collect-list): Added dot-pair support for (collect-list '(((#(scheme-id else) any . each-any)))).

        * library.scm (case-lambda): Added case-lambda.

2008-10-10  higepon  <higepon@users.sourceforge.jp>

        * VM.cpp (run): Added kind message for wrong number arguments.

2008-10-09  higepon  <higepon@users.sourceforge.jp>

        * library.scm (vector-map): Fixed bug.

        * ListProcedures.cpp : (length p) raise error when (not (list? p)).

2008-10-07  higepon  <higepon@users.sourceforge.jp>

        * Scanner.cpp: Added #xff style number.

        * scanner.re (Scanner): RADIX_16.

        * ByteVector.h (scheme): Modified assert.
