@@ -2536,7 +2536,19 @@
 (display '((bytevector=? #vu8(3 4 3) #vu8(3 3 3))))
 (display ", expects ")
 (display '#f)
-(set! *test-ret* (bytevector=? #vu8(3 4 3) #vu8(3 3 3)))(if (equal? *test-ret* '#f) (display " ===> ok\n") (begin (set! *test-error* (cons '(bytevector=? #vu8(3 4 3) #vu8(3 3 3)) *test-error*)) (display " ===> NG got ") (write *test-ret*) (display "\n") (error "test" "test failed" '((bytevector=? #vu8(3 4 3) #vu8(3 3 3))))))(if (null? *test-error*)
+(set! *test-ret* (bytevector=? #vu8(3 4 3) #vu8(3 3 3)))(if (equal? *test-ret* '#f) (display " ===> ok\n") (begin (set! *test-error* (cons '(bytevector=? #vu8(3 4 3) #vu8(3 3 3)) *test-error*)) (display " ===> NG got ") (write *test-ret*) (display "\n") (error "test" "test failed" '((bytevector=? #vu8(3 4 3) #vu8(3 3 3))))))(display "test ")
+(display '((let ((bytevector (make-bytevector 4))) (bytevector-fill! bytevector 3) bytevector)))
+(display ", expects ")
+(display '#vu8(3 3 3 3))
+(set! *test-ret* (let ((bytevector (make-bytevector 4))) (bytevector-fill! bytevector 3) bytevector))(if (equal? *test-ret* '#vu8(3 3 3 3)) (display " ===> ok\n") (begin (set! *test-error* (cons '(let ((bytevector (make-bytevector 4))) (bytevector-fill! bytevector 3) bytevector) *test-error*)) (display " ===> NG got ") (write *test-ret*) (display "\n") (error "test" "test failed" '((let ((bytevector (make-bytevector 4))) (bytevector-fill! bytevector 3) bytevector)))))(display "test ")
+(display '((let ((b #vu8(1 2 3 4 5 6 7 8))) (bytevector-copy! b 0 b 3 4) b)))
+(display ", expects ")
+(display '#vu8(1 2 3 1 2 3 4 8))
+(set! *test-ret* (let ((b #vu8(1 2 3 4 5 6 7 8))) (bytevector-copy! b 0 b 3 4) b))(if (equal? *test-ret* '#vu8(1 2 3 1 2 3 4 8)) (display " ===> ok\n") (begin (set! *test-error* (cons '(let ((b #vu8(1 2 3 4 5 6 7 8))) (bytevector-copy! b 0 b 3 4) b) *test-error*)) (display " ===> NG got ") (write *test-ret*) (display "\n") (error "test" "test failed" '((let ((b #vu8(1 2 3 4 5 6 7 8))) (bytevector-copy! b 0 b 3 4) b)))))(display "test ")
+(display '((bytevector-copy #vu8(1 2 3 4))))
+(display ", expects ")
+(display '#vu8(1 2 3 4))
+(set! *test-ret* (bytevector-copy #vu8(1 2 3 4)))(if (equal? *test-ret* '#vu8(1 2 3 4)) (display " ===> ok\n") (begin (set! *test-error* (cons '(bytevector-copy #vu8(1 2 3 4)) *test-error*)) (display " ===> NG got ") (write *test-ret*) (display "\n") (error "test" "test failed" '((bytevector-copy #vu8(1 2 3 4))))))(if (null? *test-error*)
 (display "passed.
 ")
 (display *test-error*))
