@@ -1555,3 +1555,11 @@ val
 (#vu8(3 3 3 3) (make-bytevector 4 3))
 (#t (bytevector=? #vu8(3 3 3) #vu8(3 3 3)))
 (#f (bytevector=? #vu8(3 4 3) #vu8(3 3 3)))
+(#vu8(3 3 3 3) (let ([bytevector (make-bytevector 4)])
+                     (bytevector-fill! bytevector 3)
+                     bytevector))
+(#vu8(1 2 3 1 2 3 4 8)
+     (let ((b #vu8(1 2 3 4 5 6 7 8)))
+       (bytevector-copy! b 0 b 3 4)
+       b))
+(#vu8(1 2 3 4) (bytevector-copy #vu8(1 2 3 4)))
